<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    android:orientation="horizontal"
    android:paddingStart="6dp"
    android:paddingEnd="6dp"
    android:gravity="center_vertical">

    <ImageButton
        android:id="@+id/top_bar_voice_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_mic"
        android:background="@drawable/button_selector"
        android:contentDescription="@string/voice_input"
        android:layout_marginEnd="6dp"
        android:scaleType="centerInside"
        android:padding="8dp" />

    <ImageButton
        android:id="@+id/top_bar_toggle_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_expand_more"
        android:background="@drawable/button_selector"
        android:contentDescription="@string/show_keyboard_tools"
        android:layout_marginEnd="6dp"
        android:scaleType="centerInside"
        android:padding="8dp" />

    <ImageButton
        android:id="@+id/top_bar_emoji_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_emoji"
        android:background="@drawable/button_selector"
        android:contentDescription="@string/tool_emoji"
        android:layout_marginEnd="6dp"
        android:scaleType="centerInside"
        android:padding="8dp" />

    <ImageButton
        android:id="@+id/top_bar_clipboard_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_clipboard"
        android:background="@drawable/button_selector"
        android:contentDescription="@string/tool_clipboard"
        android:layout_marginEnd="6dp"
        android:scaleType="centerInside"
        android:padding="8dp" />

    <ImageButton
        android:id="@+id/top_bar_image_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_image"
        android:background="@drawable/button_selector"
        android:contentDescription="@string/image_picker"
        android:layout_marginEnd="6dp"
        android:scaleType="centerInside"
        android:padding="8dp" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="1" />

    <ImageButton
        android:id="@+id/top_bar_settings_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_tools_grid"
        android:background="@drawable/button_selector"
        android:contentDescription="@string/show_keyboard_tools"
        android:scaleType="centerInside"
        android:padding="8dp" />

</LinearLayout>
